Updated analysis documentation
